--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,10 +18,12 @@
             <div class="sidebar">
                 <div class="user-panel mt-3 pb-3 mb-3 d-flex">
                     <div class="image">
-                        <img src="/assets/dist/img/user2-160x160.jpg" class="img-circle elevation-2" alt="User Image">
+                        <a [routerLink]="['perfil']" class="d-block">
+                            <img src="/assets/dist/img/user2-160x160.jpg" class="img-circle elevation-2" alt="User Image">
+                        </a>
                     </div>
                     <div class="info">
-                        <a href="#" class="d-block">Alexander Pierce</a>
+                        <a [routerLink]="['perfil']" class="d-block">Juan Robles</a>
                     </div>
                 </div>
 
