--- a/src/app/components/perfil/perfil.component.html
+++ b/src/app/components/perfil/perfil.component.html
@@ -1,1 +1,27 @@
-<p>perfil works!</p>
+<div class="row d-flex align-items-stretch border">
+    <div class="col-md-12 d-flex align-items-stretch">
+        <div class="card bg-light d-block mx-auto">
+            <div class="card-body pt-4">
+                <div class="row">
+                    <div class="col-7">
+                        <h2 class="lead"><b>Juan</b></h2>
+                        <p class="text-muted text-sm"><b>Descripción: </b> Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum, iste dicta temporibus adipisci doloribus assumenda ut. </p>
+                        <ul class="ml-4 mb-0 fa-ul text-muted">
+                            <li class="small"><span class="fa-li"><i class="fas fa-lg fa-phone"></i></span> Telefono #: + 800 - 12 12 23 52</li>
+                        </ul>
+                    </div>
+                    <div class="col-5 text-center">
+                        <img src="/assets/dist/img/user1-128x128.jpg" alt="" class="img-circle img-fluid">
+                    </div>
+                </div>
+            </div>
+            <div class="card-footer">
+                <div class="text-right">
+                    <a href="#" class="btn btn-sm btn-primary">
+                        <i class="fas fa-user"></i> Editar Perfil
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
