--- a/src/app/components/repartidores/repartidores.component.html
+++ b/src/app/components/repartidores/repartidores.component.html
@@ -4,7 +4,7 @@
             <h2>Busca a Tus Repartidores</h2>
         </div>
     </div>
-    <div class="row">
+    <div class="row mb-4">
         <div class="col-md-12">
             <div class="input-group input-group-sm">
                 <input class="form-control form-control-navbar" type="search" placeholder="Search" aria-label="Search">
