--- a/src/app/components/eventos/eventos.component.html
+++ b/src/app/components/eventos/eventos.component.html
@@ -132,13 +132,14 @@
                     <div class="input-group form-row mb-3">
                         <div class="col-md-12">
                             <label for="imgPrincipal">Imagen Principal del Evento: <small class="text-danger">*</small></label>
-                            <input type="file" id="imgPrincipal" accept=".jpg" (change)="imgPrincipal($event)" formControlName="imgPrincipal">
+                            <input [writeFile]="true" type="file" id="imgPrincipal" accept=".jpg" (change)="imgPrincipal($event)" formControlName="imgPrincipal">
                             <small *ngIf="validacionImg" class="form-text text-danger">Imagen Principal Obligatoria.</small>
-                            <div class="row" *ngIf="urlPrincipal != null">
-                                <div class="col-md-7">
+                            <small *ngIf="validacionTamImg" class="form-text text-danger">Error: Tamaño Mínimo: 950x690. Tamaño Máximo: 4096x2160</small>
+                            <div class="row" *ngIf="(urlPrincipal != null) && (!validacionTamImg)">
+                                <div class="col-md-9">
                                     <img [src]="urlPrincipal" height="200" class="float-right"><br>
                                 </div>
-                                <div class="col-md-5">
+                                <div class="col-md-3">
                                     <button type="button" aria-label="Close" class="btn btn-danger float-left" (click)="borrarImgPrincipal()">
                                   <span aria-hidden="true">&times;</span>
                                 </button>
@@ -149,14 +150,15 @@
 
                     <div class="input-group form-row mb-3">
                         <div class="col-md-12">
-                            <label for="imgPrincipal">Imagen de Carousel: <small class="text-danger">*</small></label>
-                            <input type="file" id="imgPrincipal" accept=".jpg" (change)="imgCarousel($event)" formControlName="imgCarousel">
+                            <label for="imgCarousel">Imagen de Carousel: <small class="text-danger">*</small></label>
+                            <input [writeFile]="true" type="file" id="imgCarousel" accept=".jpg" (change)="imgCarousel($event)" formControlName="imgCarousel">
                             <small *ngIf="validacionImgCarousel" class="form-text text-danger">Imagen de Carousel Obligatoria.</small>
-                            <div class="row" *ngIf="urlCarousel != null">
-                                <div class="col-md-7">
+                            <small *ngIf="validacionTamImgCarousel" class="form-text text-danger">Error: Tamaño mínimo 1250x690. Tamaño Máximo: 4096x2160</small>
+                            <div class="row" *ngIf="(urlCarousel != null) && (!validacionTamImgCarousel)">
+                                <div class="col-md-9">
                                     <img [src]="urlCarousel" height="200" class="float-right"><br>
                                 </div>
-                                <div class="col-md-5">
+                                <div class="col-md-3">
                                     <button type="button" aria-label="Close" class="btn btn-danger float-left" (click)="borrarImgCarousel()">
                                 <span aria-hidden="true">&times;</span>
                               </button>
@@ -170,10 +172,10 @@
                             <label for="imgsEvento">Imagenes del Evento:</label>
                             <input type='file' id="imgsEvento" accept=".jpg" (change)="multiImg($event)" multiple formControlName="imgsEvento">
                             <div class="row" *ngFor='let url of urls; let i = index'>
-                                <div class="col-md-7">
+                                <div class="col-md-9">
                                     <img [src]="url " height="200 " class="float-right"><br>
                                 </div>
-                                <div class="col-md-5">
+                                <div class="col-md-3">
                                     <button type="button" aria-label="Close" class="btn btn-danger float-left" (click)="borrarImgs(i)">
                               <span aria-hidden="true">&times;</span>
                             </button>
