--- a/src/app/components/publicacion-editar/publicacion-editar.component.html
+++ b/src/app/components/publicacion-editar/publicacion-editar.component.html
@@ -105,7 +105,8 @@
                                     <div class="col-md-6 text-center">
                                         <label for="imgPrincipal">Imagen Principal:</label><br>
                                         <input type="file" id="imgPrincipal" accept=".jpg" (change)="imgPrincipal($event)" formControlName="imgPrincipal"> <br>
-                                        <div class="row" *ngIf="urlPrincipal != null">
+                                        <small *ngIf="validacionTamImg" class="form-text text-danger">Error: Tamaño Mínimo: 950x690. Tamaño Máximo: 4096x2160</small>
+                                        <div class="row" *ngIf="(urlPrincipal != null) && (!validacionTamImg)">
                                             <div class="col-md-9">
                                                 <img [src]="urlPrincipal" height="200" class="d-block mx-auto float-right"><br>
                                             </div>
@@ -120,15 +121,18 @@
                                     <div class="col-md-6 text-center">
                                         <label for="imgsPublicacion ">Imagenes Generales:</label><br>
                                         <input type='file' id="imgsPublicacion " accept=".jpg " (change)="multiImg($event) " multiple formControlName="imgsPublicacion"> <br>
+                                        <small *ngIf="validacionTamImgs" class="form-text text-danger">Error: Tamaño Mínimo: 950x690. Tamaño Máximo: 4096x2160</small>
                                         <div class="row" *ngFor='let url of urls; let i = index'>
-                                            <div class="col-md-9">
-                                                <img [src]="url " height="200 " class="d-block mx-auto float-right"><br>
-                                            </div>
-                                            <div class="col-md-3">
-                                                <button type="button" aria-label="Close" class="btn btn-danger float-left" (click)="borrarImgs(i)">
-                                              <span aria-hidden="true">&times;</span>
-                                            </button>
-                                            </div>
+                                            <ng-container *ngIf="(urls != null) && (!validacionTamImgs)">
+                                                <div class="col-md-9">
+                                                    <img [src]="url " height="200 " class="d-block mx-auto float-right"><br>
+                                                </div>
+                                                <div class="col-md-3">
+                                                    <button type="button" aria-label="Close" class="btn btn-danger float-left" (click)="borrarImgs(i)">
+                                                      <span aria-hidden="true">&times;</span>
+                                                    </button>
+                                                </div>
+                                            </ng-container>
                                         </div>
                                     </div>
                                 </div>
