--- a/src/app/components/publicaciones/publicaciones.component.html
+++ b/src/app/components/publicaciones/publicaciones.component.html
@@ -105,11 +105,12 @@
                             <label for="principal">Imagen Principal: <small class="text-danger">*</small></label><br>
                             <input type="file" id="principal" accept=".jpg" (change)="imgPrincipal($event)" formControlName="imgPrincipal">
                             <small *ngIf="validacionImgPrincipal" class="form-text text-danger">Imagen Principal Obligatoria.</small>
-                            <div class="row" *ngIf="urlPrincipal != null">
-                                <div class="col-md-7">
+                            <small *ngIf="validacionTamImg" class="form-text text-danger">Error: Tamaño Mínimo: 950x690. Tamaño Máximo: 4096x2160</small>
+                            <div class="row" *ngIf="(urlPrincipal != null) && (!validacionTamImg)">
+                                <div class="col-md-9">
                                     <img [src]="urlPrincipal" height="200" class="float-right"><br>
                                 </div>
-                                <div class="col-md-5">
+                                <div class="col-md-3">
                                     <button type="button" aria-label="Close" class="btn btn-danger float-left" (click)="borrarImgPrincipal()">
                                 <span aria-hidden="true">&times;</span>
                               </button>
@@ -122,17 +123,19 @@
                         <div class="col-md-12">
                             <label for="imgsPublicacion">Imagenes de la Publicación:</label>
                             <input type='file' id="imgsPublicacion" accept=".jpg" (change)="multiImg($event)" multiple formControlName="imgsPublicacion">
-                            <small *ngIf="validacionImgs" class="form-text text-danger">Imagen Principal Obligatoria.</small>
-                            <div class="row" *ngFor='let url of urls; let i = index'>
-                                <div class="col-md-7">
-                                    <img [src]="url " height="200 " class="float-right"><br>
+                            <small *ngIf="validacionTamImgs" class="form-text text-danger">Error: Tamaño Mínimo: 950x690. Tamaño Máximo: 4096x2160</small>
+                            <ng-container *ngIf="(urls != null) && (!validacionTamImgs)">
+                                <div class="row" *ngFor='let url of urls; let i = index'>
+                                    <div class="col-md-9">
+                                        <img [src]="url " height="200 " class="float-right"><br>
+                                    </div>
+                                    <div class="col-md-3">
+                                        <button type="button" aria-label="Close" class="btn btn-danger float-left" (click)="borrarImgs(i)">
+                              <span aria-hidden="true">&times;</span>
+                            </button>
+                                    </div>
                                 </div>
-                                <div class="col-md-5">
-                                    <button type="button" aria-label="Close" class="btn btn-danger float-left" (click)="borrarImgs(i)">
-                            <span aria-hidden="true">&times;</span>
-                          </button>
-                                </div>
-                            </div>
+                            </ng-container>
                         </div>
                     </div>
                     <hr>
